tests/paczka1/small_fuzzy/60864036.err
Error in line 1: Ws3SqGxp A173 49,7
Error in line 5: x373i4s38 S11 49,2
Error in line 9: x373i4s38 A173 -4,6
